# PolyHostInterface

./: CMakeLists.txt  README.md  build-APP.bat  build-BOTH.bat  build-VST3.bat  build.bat
Source/: AppSettings.cpp  AppSettings.h  AudioEngine.cpp  AudioEngine.h  ButtonStyling.cpp  ButtonStyling.h  ClapPluginWrapper.cpp  ClapPluginWrapper.h  DebugLog.cpp  DebugLog.h  FileMenuHelper.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiEngine.cpp  MidiEngine.h  MidiMonitorWindow.h  PluginTabComponent.cpp  PluginTabComponent.h  PointerControl.cpp  PointerControl.h  PointerControlView.cpp  PointerControlView.h  PresetFileDialogHelper.h  PresetSessionController.h  RecentPresetMenuHelper.h  RoutingView.cpp  RoutingView.h  SessionData.h  SessionDocument.h  SessionManager.cpp  SessionManager.h  SessionTypes.h  StandaloneTempoSupport.cpp  StandaloneTempoSupport.h  TransportController.cpp  TransportController.h  TransportState.h  debug.log.txt
Source/APP/: AppSettings.cpp  AppSettings.h  AudioEngine.cpp  AudioEngine.h  ButtonStyling.cpp  CMakeLists.txt  ClapPluginWrapper.cpp  ClapPluginWrapper.h  MainComponent.cpp  MainComponent.h  MidiEngine.cpp  MidiEngine.h  MidiMonitorWindow.h  PluginTabComponent.h  PointerControl.cpp  PointerControl.h  PolyHost.rc  RoutingView.cpp  RoutingView.h  SessionManager.h  StandaloneApplication.cpp
Source/VST3/: AppSettings.cpp  AppSettings.h  ButtonStyling.cpp  ButtonStyling.h  CMakeLists.txt  DebugLog.cpp  Instructions.cpp  Instructions.h  MacroMappingsView.cpp  MacroMappingsView.h  MainView.cpp  MainView.h  MidiMonitorWindow.h  PluginCore.cpp  PluginCore.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PointerControl.cpp  PointerControl.h  PointerSettingsDialogue.cpp  PointerSettingsDialogue.h  RoutingView.cpp  RoutingView.h  SessionManager.cpp  SessionManager.h  SlotModel.cpp  SlotModel.h  TabModel.cpp  TabModel.h
